--- a/Translations/WinMerge/Basque.po
+++ b/Translations/WinMerge/Basque.po
@@ -566,8 +566,8 @@ msgstr "I&txi Denak"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "Aldatu &Panela\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "Aldatu &Panela\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1253,8 +1253,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "I&nguratu Lerroak"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "I&nguratu Lerroak\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
