--- a/Translations/WinMerge/Brazilian.po
+++ b/Translations/WinMerge/Brazilian.po
@@ -577,8 +577,8 @@ msgstr "Fec&har Tudo"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "Mudar o &Painel\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "Mudar o &Painel\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1264,8 +1264,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "O&rganizar as Linhas"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "O&rganizar as Linhas\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
