--- a/Translations/WinMerge/Bulgarian.po
+++ b/Translations/WinMerge/Bulgarian.po
@@ -575,8 +575,8 @@ msgstr "Затвори &всички"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "Смени &листа\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "Смени &листа\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1262,8 +1262,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "Отрежи дългите редове"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "Отрежи дългите редове\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
