--- a/Translations/WinMerge/Catalan.po
+++ b/Translations/WinMerge/Catalan.po
@@ -574,8 +574,8 @@ msgstr "T&anca-ho tot"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "Canvia de &subfinestra\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "Canvia de &subfinestra\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1261,8 +1261,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "A&justa les línies"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "A&justa les línies\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
