--- a/Translations/WinMerge/ChineseSimplified.po
+++ b/Translations/WinMerge/ChineseSimplified.po
@@ -575,8 +575,8 @@ msgstr "全部关闭(&S)"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "切换窗格(&P)\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "切换窗格(&P)\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1262,7 +1262,7 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
 msgstr "自动换行(&R)"
 
 #: Merge.rc:827
