--- a/Translations/WinMerge/ChineseTraditional.po
+++ b/Translations/WinMerge/ChineseTraditional.po
@@ -575,8 +575,8 @@ msgstr "關閉全部(&S)"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "切換窗格(&P)\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "切換窗格(&P)\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1264,7 +1264,7 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
 msgstr "自動換行(&R)"
 
 #: Merge.rc:827
