--- a/Translations/WinMerge/Croatian.po
+++ b/Translations/WinMerge/Croatian.po
@@ -575,8 +575,8 @@ msgstr "Zatvori &sve panele"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "&Drugi panel\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "&Drugi panel\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1262,8 +1262,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "Pre&lomi retke"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "Pre&lomi retke\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
