--- a/Translations/WinMerge/Danish.po
+++ b/Translations/WinMerge/Danish.po
@@ -576,8 +576,8 @@ msgstr "Luk &alle"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "&Skift panel\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "&Skift panel\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1263,8 +1263,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "O&mbryd Linier"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "O&mbryd Linier\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
