--- a/Translations/WinMerge/Dutch.po
+++ b/Translations/WinMerge/Dutch.po
@@ -576,8 +576,8 @@ msgstr "Alles &Sluiten"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "&Venster wijzigen\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "&Venster wijzigen\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1263,8 +1263,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "Automatische te&rugloop"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "Automatische te&rugloop\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
