--- a/Translations/WinMerge/English.pot
+++ b/Translations/WinMerge/English.pot
@@ -571,7 +571,7 @@ msgstr ""
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
+msgid "Change &Pane\tAlt+PgDown"
 msgstr ""
 
 #: Merge.rc:122
@@ -5405,7 +5405,7 @@ msgstr ""
 
 #: Merge.rc:2501
 #, c-format
-msgid "Enable word wrap\nWrap Lines"
+msgid "Enable word wrap\nWrap Lines (Ctrl+Shift+W)"
 msgstr ""
 
 #: Merge.rc:2502
