--- a/Translations/WinMerge/French.po
+++ b/Translations/WinMerge/French.po
@@ -577,8 +577,8 @@ msgstr "Fermer &tout"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "Chan&ger de volet\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "Chan&ger de volet\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1264,8 +1264,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "&Retour à la ligne automatique"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "&Retour à la ligne automatique\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
