--- a/Translations/WinMerge/Galician.po
+++ b/Translations/WinMerge/Galician.po
@@ -575,8 +575,8 @@ msgstr "Pe&char todo"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "Trocar o &panel\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "Trocar o &panel\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1262,8 +1262,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "A&xuste de liñas"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "A&xuste de liñas\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
