--- a/Translations/WinMerge/German.po
+++ b/Translations/WinMerge/German.po
@@ -576,8 +576,8 @@ msgstr "Alle s&chlieﬂen"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "&Ausschnitt wechseln\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "&Ausschnitt wechseln\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1263,8 +1263,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "Zeilen &umbrechen"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "Zeilen &umbrechen\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
