--- a/Translations/WinMerge/Greek.po
+++ b/Translations/WinMerge/Greek.po
@@ -574,8 +574,8 @@ msgstr "Κλείσιμο όλ&ων"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "Εναλλαγή μεταξύ Πε&δίων\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "Εναλλαγή μεταξύ Πε&δίων\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1261,8 +1261,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "Ανα&δίπλωση Γραμμών"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "Ανα&δίπλωση Γραμμών\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
