--- a/Translations/WinMerge/Italian.po
+++ b/Translations/WinMerge/Italian.po
@@ -575,8 +575,8 @@ msgstr "Chiudi &tutto"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "Cambia &pannello\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "Cambia &pannello\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1262,8 +1262,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "A capo a&utomatico"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "A capo a&utomatico\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
