--- a/Translations/WinMerge/Japanese.po
+++ b/Translations/WinMerge/Japanese.po
@@ -574,8 +574,8 @@ msgstr "全て閉じる(&S)"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "ペインを変更する(&P)\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "ペインを変更する(&P)\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1261,7 +1261,7 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
 msgstr "行を右端で折返す(&R)"
 
 #: Merge.rc:827
