--- a/Translations/WinMerge/Norwegian.po
+++ b/Translations/WinMerge/Norwegian.po
@@ -574,8 +574,8 @@ msgstr ""
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "&Endre vindu\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "&Endre vindu\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
