--- a/Translations/WinMerge/Persian.po
+++ b/Translations/WinMerge/Persian.po
@@ -574,8 +574,8 @@ msgstr "&s ÈÓÊä åãí "
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "&P ÊÛííÑ åÇÑæÔ \tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "&P ÊÛííÑ åÇÑæÔ \tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1261,7 +1261,7 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
 msgstr "&r ÓØÑ ÈäÏí ÎØæØ "
 
 #: Merge.rc:827
