--- a/Translations/WinMerge/Polish.po
+++ b/Translations/WinMerge/Polish.po
@@ -576,8 +576,8 @@ msgstr "Zamknij &wszystkie"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "Prze³¹cz &panel\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "Prze³¹cz &panel\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1263,8 +1263,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "Za&wijaj wiersze"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "Za&wijaj wiersze\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
