--- a/Translations/WinMerge/Portuguese.po
+++ b/Translations/WinMerge/Portuguese.po
@@ -576,8 +576,8 @@ msgstr "Fechar &Todas"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "Mudar &Vista\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "Mudar &Vista\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1263,8 +1263,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "Ajuste de linha"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "Ajuste de linha\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
