--- a/Translations/WinMerge/Romanian.po
+++ b/Translations/WinMerge/Romanian.po
@@ -575,8 +575,8 @@ msgstr "Închid&e toate"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "Schimbã &panou\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "Schimbã &panou\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1262,8 +1262,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "Infãºoa&rã rândurile lungi"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "Infãºoa&rã rândurile lungi\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
