--- a/Translations/WinMerge/Russian.po
+++ b/Translations/WinMerge/Russian.po
@@ -576,8 +576,8 @@ msgstr "Закрыть все"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "Переключить &Окно\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "Переключить &Окно\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1263,8 +1263,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "Перенос по словам"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "Перенос по словам\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
