--- a/Translations/WinMerge/Serbian.po
+++ b/Translations/WinMerge/Serbian.po
@@ -574,8 +574,8 @@ msgstr "Затвори &све"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "Замени &табле\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "Замени &табле\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1261,8 +1261,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "Завршетак редова"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "Завршетак редова\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
