--- a/Translations/WinMerge/Slovak.po
+++ b/Translations/WinMerge/Slovak.po
@@ -575,8 +575,8 @@ msgstr "Zatvoriù &vöetky"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "Zmeniù &panel\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "Zmeniù &panel\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1262,8 +1262,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "&Zalamovaù riadky"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "&Zalamovaù riadky\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
