--- a/Translations/WinMerge/Slovenian.po
+++ b/Translations/WinMerge/Slovenian.po
@@ -575,8 +575,8 @@ msgstr "Zapri &vse"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "Preklopi &okvirja\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "Preklopi &okvirja\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1262,8 +1262,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "Pr&elomi vrstice"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "Pr&elomi vrstice\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
