--- a/Translations/WinMerge/Swedish.po
+++ b/Translations/WinMerge/Swedish.po
@@ -575,8 +575,8 @@ msgstr "Stä&ng alla"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "Växla fil\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "Växla fil\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1262,8 +1262,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "R&adbryt rader"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "R&adbryt rader\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
