--- a/Translations/WinMerge/Turkish.po
+++ b/Translations/WinMerge/Turkish.po
@@ -575,8 +575,8 @@ msgstr "Tümünü Kapat"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tF6"
-msgstr "Diðer Paneli Aktifleþtir\tF6"
+msgid "Change &Pane\tAlt+PgDown"
+msgstr "Diðer Paneli Aktifleþtir\tAlt+PgDown"
 
 #: Merge.rc:122
 #: Merge.rc:246
@@ -1262,8 +1262,8 @@ msgstr ""
 
 #: Merge.rc:826
 #, c-format
-msgid "Wr&ap Lines"
-msgstr "Satýrlarý Kaydýr"
+msgid "Wr&ap Lines\tCtrl+Shift+W"
+msgstr "Satýrlarý Kaydýr\tCtrl+Shift+W"
 
 #: Merge.rc:827
 #, c-format
