--- a/Translations/WinMerge/Dutch.po
+++ b/Translations/WinMerge/Dutch.po
@@ -576,8 +576,8 @@ msgstr "Alles &Sluiten"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "&Venster wijzigen\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "&Venster wijzigen\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
