--- a/Translations/WinMerge/Romanian.po
+++ b/Translations/WinMerge/Romanian.po
@@ -575,8 +575,8 @@ msgstr "Închid&e toate"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "Schimbã &panou\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "Schimbã &panou\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
