--- a/Translations/WinMerge/Brazilian.po
+++ b/Translations/WinMerge/Brazilian.po
@@ -577,8 +577,8 @@ msgstr "Fec&har Tudo"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "Mudar o &Painel\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "Mudar o &Painel\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
