--- a/Translations/WinMerge/Bulgarian.po
+++ b/Translations/WinMerge/Bulgarian.po
@@ -575,8 +575,8 @@ msgstr "Затвори &всички"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "Смени &листа\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "Смени &листа\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
