--- a/Translations/WinMerge/Catalan.po
+++ b/Translations/WinMerge/Catalan.po
@@ -574,8 +574,8 @@ msgstr "T&anca-ho tot"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "Canvia de &subfinestra\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "Canvia de &subfinestra\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
