--- a/Translations/WinMerge/ChineseSimplified.po
+++ b/Translations/WinMerge/ChineseSimplified.po
@@ -575,8 +575,8 @@ msgstr "全部关闭(&S)"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "切换窗格(&P)\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "切换窗格(&P)\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
