--- a/Translations/WinMerge/ChineseTraditional.po
+++ b/Translations/WinMerge/ChineseTraditional.po
@@ -575,8 +575,8 @@ msgstr "關閉全部(&S)"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "切換窗格(&P)\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "切換窗格(&P)\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
