--- a/Translations/WinMerge/Croatian.po
+++ b/Translations/WinMerge/Croatian.po
@@ -575,8 +575,8 @@ msgstr "Zatvori &sve panele"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "&Drugi panel\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "&Drugi panel\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
