--- a/Translations/WinMerge/Czech.po
+++ b/Translations/WinMerge/Czech.po
@@ -575,8 +575,8 @@ msgstr "Z&avøít vše"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "Z&mìnit panel\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "Z&mìnit panel\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
