--- a/Translations/WinMerge/Danish.po
+++ b/Translations/WinMerge/Danish.po
@@ -576,8 +576,8 @@ msgstr "Luk &alle"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "&Skift panel\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "&Skift panel\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
