--- a/Translations/WinMerge/French.po
+++ b/Translations/WinMerge/French.po
@@ -577,8 +577,8 @@ msgstr "Fermer &tout"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "Chan&ger de volet\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "Chan&ger de volet\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
