--- a/Translations/WinMerge/German.po
+++ b/Translations/WinMerge/German.po
@@ -576,8 +576,8 @@ msgstr "Alle s&chlieﬂen"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "&Ausschnitt wechseln\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "&Ausschnitt wechseln\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
