--- a/Translations/WinMerge/Greek.po
+++ b/Translations/WinMerge/Greek.po
@@ -574,8 +574,8 @@ msgstr "Κλείσιμο όλ&ων"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "Εναλλαγή μεταξύ Πε&δίων\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "Εναλλαγή μεταξύ Πε&δίων\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
