--- a/Translations/WinMerge/Hungarian.po
+++ b/Translations/WinMerge/Hungarian.po
@@ -574,8 +574,8 @@ msgstr "&Mindegyik bezárása"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "&Panel váltása\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "&Panel váltása\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
