--- a/Translations/WinMerge/Italian.po
+++ b/Translations/WinMerge/Italian.po
@@ -575,8 +575,8 @@ msgstr "Chiudi &tutto"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "Cambia &pannello\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "Cambia &pannello\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
