--- a/Translations/WinMerge/Japanese.po
+++ b/Translations/WinMerge/Japanese.po
@@ -574,8 +574,8 @@ msgstr "全て閉じる(&S)"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "ペインを変更する(&P)\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "ペインを変更する(&P)\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
