--- a/Translations/WinMerge/Korean.po
+++ b/Translations/WinMerge/Korean.po
@@ -576,8 +576,8 @@ msgstr "모두 닫기(&S)"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "창 전환(&P)\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "창 전환(&P)\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
