--- a/Translations/WinMerge/Persian.po
+++ b/Translations/WinMerge/Persian.po
@@ -574,8 +574,8 @@ msgstr "&s ÈÓÊä åãí "
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "&P ÊÛííÑ åÇÑæÔ \tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "&P ÊÛííÑ åÇÑæÔ \tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
