--- a/Translations/WinMerge/Polish.po
+++ b/Translations/WinMerge/Polish.po
@@ -576,8 +576,8 @@ msgstr "Zamknij &wszystkie"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "Prze³¹cz &panel\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "Prze³¹cz &panel\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
