--- a/Translations/WinMerge/Portuguese.po
+++ b/Translations/WinMerge/Portuguese.po
@@ -576,8 +576,8 @@ msgstr "Fechar &Todas"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "Mudar &Vista\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "Mudar &Vista\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
