--- a/Translations/WinMerge/Serbian.po
+++ b/Translations/WinMerge/Serbian.po
@@ -574,8 +574,8 @@ msgstr "Затвори &све"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "Замени &табле\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "Замени &табле\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
