--- a/Translations/WinMerge/Slovak.po
+++ b/Translations/WinMerge/Slovak.po
@@ -575,8 +575,8 @@ msgstr "Zatvoriù &vöetky"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "Zmeniù &panel\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "Zmeniù &panel\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
