--- a/Translations/WinMerge/Slovenian.po
+++ b/Translations/WinMerge/Slovenian.po
@@ -575,8 +575,8 @@ msgstr "Zapri &vse"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "Preklopi &okvirja\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "Preklopi &okvirja\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
