--- a/Translations/WinMerge/Spanish.po
+++ b/Translations/WinMerge/Spanish.po
@@ -577,8 +577,8 @@ msgstr "Cerrar &Todas"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "Cambiar &Panel\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "Cambiar &Panel\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
