--- a/Translations/WinMerge/Turkish.po
+++ b/Translations/WinMerge/Turkish.po
@@ -575,8 +575,8 @@ msgstr "Tümünü Kapat"
 #: Merge.rc:693
 #: Merge.rc:880
 #, c-format
-msgid "Change &Pane\tAlt+PgDown"
-msgstr "Diðer Paneli Aktifleþtir\tAlt+PgDown"
+msgid "Change &Pane\tF12"
+msgstr "Diðer Paneli Aktifleþtir\tF12"
 
 #: Merge.rc:122
 #: Merge.rc:246
